adicionado Buy e InventoryController. Migrando para MVC

--- a/product-inventory/product_inventory.csproj
+++ b/product-inventory/product_inventory.csproj
@@ -79,6 +79,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="controller\BuyController.cs" />
+    <Compile Include="controller\InventoryController.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -132,7 +133,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Product.Invetory.Dao\Product.Inventory.Dao.csproj">
+      <Project>{ff44ffb8-5366-48bc-8bc4-3fb39b0ea232}</Project>
+      <Name>Product.Inventory.Dao</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
