--- a/product-inventory/product_inventory.csproj
+++ b/product-inventory/product_inventory.csproj
@@ -101,9 +101,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="controller\BuyController.cs" />
-    <Compile Include="controller\InventoryController.cs" />
-    <Compile Include="controller\SalesController.cs" />
+    <Compile Include="Controller\BuyController.cs" />
+    <Compile Include="Controller\InventoryController.cs" />
+    <Compile Include="Controller\SalesController.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
