Registro das compras no banco e att da qnt no estoque

--- a/Product.Inventory/Product.Inventory.csproj
+++ b/Product.Inventory/Product.Inventory.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Utils\IntegerUtils.cs" />
+    <Compile Include="Utils\ValidRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
