--- a/Product.Inventory.UI/Product.Inventory.UI.csproj
+++ b/Product.Inventory.UI/Product.Inventory.UI.csproj
@@ -93,6 +93,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\ItemViewModel.cs" />
     <Page Include="HistoricView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
