--- a/Product.Inventory.UI/Product.Inventory.UI.csproj
+++ b/Product.Inventory.UI/Product.Inventory.UI.csproj
@@ -93,7 +93,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModel\ItemViewModel.cs" />
     <Page Include="HistoricView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -106,10 +105,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Controller\BuyController.cs" />
-    <Compile Include="Controller\ProductController.cs" />
-    <Compile Include="Controller\InventoryController.cs" />
-    <Compile Include="Controller\SalesController.cs" />
     <Compile Include="HistoricView.xaml.cs">
       <DependentUpon>HistoricView.xaml</DependentUpon>
     </Compile>
@@ -159,6 +154,14 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Product.Inventory.BusinessLogic\Product.Inventory.BusinessLogic.csproj">
+      <Project>{380a8b9a-3f79-49cb-8851-78cbb0d1c732}</Project>
+      <Name>Product.Inventory.BusinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Product.Inventory.Controller\Product.Inventory.Controller.csproj">
+      <Project>{B238433B-16A1-477F-A0C8-9EBB558E2C48}</Project>
+      <Name>Product.Inventory.Controller</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Product.Inventory\Product.Inventory.csproj">
       <Project>{FF44FFB8-5366-48BC-8BC4-3FB39B0EA232}</Project>
       <Name>Product.Inventory</Name>
